--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
